Prevent overlap between plus signs

--- a/src/components/CellActions/CellActions.css
+++ b/src/components/CellActions/CellActions.css
@@ -3,12 +3,9 @@
 .root  {
   width: 100%;
   height: 100%;
-  background: #3CA55C; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #3CA55C , #B5AC49); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #3CA55C , #B5AC49); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .addWidget{
-  color: #FFF;
+  color: #000000;
 }
 
 .slideDownEnter-enter {
